// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CitationListContainer does not render if total <= 0 1`] = `
<ContentBox
  leftActions={null}
  loading={false}
  rightActions={null}
  title={null}
/>
`;

exports[`CitationListContainer renders with state from store 1`] = `
<ContentBox
  leftActions={null}
  loading={false}
  rightActions={null}
  title={null}
>
  <ListWithPagination
    loading={false}
    onPageChange={[Function]}
    page={1}
    pageItems={
      Immutable.List [
        Immutable.Map {
          control_number: 170,
        },
      ]
    }
    pageSize={25}
    renderItem={[Function]}
    title={null}
    total={1}
  />
</ContentBox>
`;
